<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.ProductActivity">

    <EditText
        android:id="@+id/editTextNameP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/frmRegister_nombre"
        android:ems="10"

        android:hint="@string/frmRegister_nombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextCostP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/frmProduct_costo"
        android:ems="10"
        android:hint="@string/frmProduct_costo"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameP" />

    <EditText
        android:id="@+id/editTextFabP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/frmProduct_fab"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/frmProduct_fab"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCostP" />

    <EditText
        android:id="@+id/editTextExP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/frmProduct_exp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/frmProduct_exp"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFabP" />

    <Button
        android:id="@+id/buttonSaveP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="208dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="save"
        android:text="@string/guardar"
        android:textColor="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rwP"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSaveP" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNV"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="200dp"
        android:background="@android:color/holo_blue_dark"
        app:itemRippleColor="@color/design_default_color_background"
        app:itemTextColor="@color/design_default_color_background"
        app:layout_constraintTop_toTopOf="@+id/rwP"
        app:menu="@menu/menu"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/imageViewP"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

</androidx.constraintlayout.widget.ConstraintLayout>