<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vista.MenuActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/menu"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/frmMenu_animal"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonAnimal"
            android:layout_width="389dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:onClick="menu"
            android:text="@string/frmMenu_animal"
            android:textColor="@android:color/background_light" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/frmMenu_animal"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonStore"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:onClick="menu"
            android:text="@string/frmMenu_tienda"
            android:textColor="@android:color/background_light" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/frmMenu_tienda"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_search_category_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonMap"
            android:layout_width="17dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:onClick="menu"

            android:text="@string/frmMenu_mapa"
            android:textColor="@android:color/background_light" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/frmMenu_mapa"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_mapmode" />
    </LinearLayout>

</LinearLayout>